# konnektoren-bevy

./: .gitignore  Cargo.toml  GameDevelopmentGuide.adoc  README.md  Requirements.adoc  justfile
.github/workflows/: gh-pages.yaml
demo/: Cargo.toml  Trunk.toml  index.html
demo/src/: demo.rs  handlers.rs  main.rs  widgets.rs
demo/src/ui/: mod.rs  panels.rs  screens.rs
src/: lib.rs
src/assets/: challenge_asset.rs  level_asset.rs  mod.rs  tests.rs
src/input/: components.rs  device.rs  mod.rs  plugin.rs  systems.rs
src/screens/: about.rs  credits.rs  mod.rs  splash.rs
src/screens/settings/: builders.rs  component_ui.rs  config.rs  input_configuration.rs  main.rs  mod.rs  plugin.rs  ui.rs
src/settings/: builders.rs  components.rs  mod.rs  systems.rs  tests.rs
src/theme/: colors.rs  mod.rs  plugin.rs  resource.rs
src/ui/: mod.rs  responsive.rs  widgets.rs
