[workspace]
members = [".", "demo"]
resolver = "3"

[workspace.dependencies]
bevy = { version = "0.16.1" }
bevy_egui = "0.35.1"
wasm-bindgen = "0.2.100"

[package]
name = "konnektoren-bevy"
version = "0.2.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
bevy_egui = { workspace = true }
chrono = "0.4.41"
wasm-bindgen = { workspace = true }
serde_yaml = { version = "0.9", optional = true }
thiserror = { version = "1.0", optional = true }
konnektoren-core = { git = "https://github.com/konnektoren/konnektoren-rs.git", optional = true }

[features]
default = ["assets", "theme", "ui", "screens", "settings", "input"]
assets = ["dep:konnektoren-core", "dep:serde_yaml", "dep:thiserror"]
theme = []
ui = ["theme"]
screens = ["theme", "ui"]
settings = []
input = []
